--- a/MyShopProject/Areas/MYSHOP/Views/Report/Orderregister.cshtml
+++ b/MyShopProject/Areas/MYSHOP/Views/Report/Orderregister.cshtml
@@ -812,6 +812,17 @@
     {
         width: 200px !important;
     }
+
+   @@media only screen and (max-width: 768px) 
+    {
+        .breadCumb {
+            padding: 0 19%;
+        }
+
+        .eqpadtbl > tbody > tr > td:not(:last-child) {
+            padding-right: 0 !important;
+        }
+    }
 </style>
 
 <div class="breadCumb">
