--- a/MyShopProject/assests/css/responsive.css
+++ b/MyShopProject/assests/css/responsive.css
@@ -33,9 +33,15 @@
         border-radius: 3px;
         clear: both;
     }
+    .flotting-right-btn {
+        position: fixed !important;
+        right: -20px !important;
+        top: 30%;
+        z-index: 999;
+    }
     .container {
-        width:100% !important;
-        padding:0;
+        width: 100% !important;
+        padding: 0;
     }
 
     .mainDashBoxes .flex-itm {
