--- a/MyShopProject/Areas/MYSHOP/Views/partyDetails/PartyList.cshtml
+++ b/MyShopProject/Areas/MYSHOP/Views/partyDetails/PartyList.cshtml
@@ -2732,7 +2732,7 @@
         margin-top: 35px !important;
     }
 
-    .dropdown-menu, .multiselect-container {
+    .multiselect-container {
         position: static !important;
     }
 
